bin/tests/snapshots/structured_text_file__1ba0c4eaa8c644a9c9a16cbe2a6ccb77_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
{ environment.etc."consul.d/dummy.json".text = "{ }"; }
---
