bin/tests/snapshots/structured_text_file__332b8b480c5affc30c40298e6494e18b_lint_json.snap
---
source: bin/tests/structured_text_file.rs
---
"--cross-file=${writeText "cross.ini" ''
  [binaries]
  gpg = '${gnupg}/bin/gpg'
''}"
---
