bin/tests/snapshots/structured_text_file__3e16b9dbb885aa8a93ba77dcc0912de9_fix.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  mkdir -p $out
  cat > $out/settings.toml <<EOF
  [main]
  path = "${pkgs.hello}"
  EOF
''
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,7 @@
 pkgs.runCommand "x" { } ''
-  mkdir -p $out
-  cat > $out/settings.toml <<EOF
+  mkdir -p "$out"
+  cat > "$out"/settings.toml <<EOF
   [main]
   path = "${pkgs.hello}"
   EOF
 ''
