bin/tests/snapshots/structured_text_file__3e16b9dbb885aa8a93ba77dcc0912de9_lint_json.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  mkdir -p $out
  cat > $out/settings.toml <<EOF
  [main]
  path = "${pkgs.hello}"
  EOF
''
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shellcheck",
      "note": "ShellCheck found issues in an inline shell script",
      "code": 28,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 12
            },
            "to": {
              "line": 2,
              "column": 16
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 25
              },
              "to": {
                "line": 7,
                "column": 3
              }
            },
            "fix": "''\n  mkdir -p \"$out\"\n  cat > \"$out\"/settings.toml <<EOF\n  [main]\n  path = \"${pkgs.hello}\"\n  EOF\n''"
          },
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 3,
              "column": 9
            },
            "to": {
              "line": 3,
              "column": 13
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": null,
          "fixable": true
        }
      ]
    },
    {
      "name": "structured_text_file",
      "note": "Structured file written as text",
      "code": 32,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 6
            }
          },
          "message": "`$out/settings.toml` is written as TOML text by the script",
          "suggestion": null,
          "fixable": false,
          "help": "The text is known before the script runs, so generate it in Nix and copy it: `cp ${(pkgs.formats.toml { }).generate \"settings.toml\" { ... }} $out/settings.toml`. Interpolated values are then quoted and escaped, and the file is always well formed."
        }
      ]
    }
  ]
}
