bin/tests/snapshots/structured_text_file__5587ddffbdd981629f505f8c746c7c1f_fix.snap
---
source: bin/tests/structured_text_file.rs
---
{ environment.etc."app/config.toml".text = ''
  name = "${name}"
  port = 80
''; }
---
