bin/tests/snapshots/structured_text_file__5587ddffbdd981629f505f8c746c7c1f_lint_stderr.snap
---
source: bin/tests/structured_text_file.rs
---
{ environment.etc."app/config.toml".text = ''
  name = "${name}"
  port = 80
''; }
---
[structured_text_file] Warning: Structured file written as text
   ╭─[ <temp_file_path>:1:44 ]
   │
 1 │ ╭─▶ { environment.etc."app/config.toml".text = ''
   ┆ ┆   
 4 │ ├─▶ ''; }
   │ │           
   │ ╰─────────── app/config.toml is written as TOML text
───╯
