bin/tests/snapshots/structured_text_file__6a5941f967ec1c09f5918d405dc6278e_fix.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  cat > $out/settings.toml <<EOF
  [main]
  home = "$HOME"
  EOF
''
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,6 @@
 pkgs.runCommand "x" { } ''
-  cat > $out/settings.toml <<EOF
+  cat > "$out"/settings.toml <<EOF
   [main]
   home = "$HOME"
   EOF
 ''
