bin/tests/snapshots/structured_text_file__6a5941f967ec1c09f5918d405dc6278e_lint_errfmt.snap
---
source: bin/tests/structured_text_file.rs
---
pkgs.runCommand "x" { } ''
  cat > $out/settings.toml <<EOF
  [main]
  home = "$HOME"
  EOF
''
---
<temp_file_path>>2:9:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
